# keynrf

./: README.md
app/: CMakeLists.txt  keynrf.overlay  prj.conf  prj.config
app/src/: keys.c  keys.h  leds.c  leds.h  main.c
